--- a/bookListView.ui
+++ b/bookListView.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>BookListView</class>
+ <widget class="QMainWindow" name="BookListView">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -17,51 +17,98 @@
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>160</y>
-      <width>256</width>
-      <height>192</height>
+      <x>20</x>
+      <y>10</y>
+      <width>761</width>
+      <height>501</height>
      </rect>
     </property>
+    <property name="verticalScrollBarPolicy">
+     <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOn</enum>
+    </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
+    </property>
+    <property name="columnCount">
+     <number>12</number>
+    </property>
+    <attribute name="horizontalHeaderVisible">
+     <bool>true</bool>
+    </attribute>
+    <attribute name="horizontalHeaderCascadingSectionResizes">
+     <bool>false</bool>
+    </attribute>
+    <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+     <bool>false</bool>
+    </attribute>
+    <column>
+     <property name="text">
+      <string>ID</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Title</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Author</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Genre</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Year</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Image</string>
+     </property>
+    </column>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
    </widget>
-   <widget class="QPushButton" name="RemoveButton">
+   <widget class="QPushButton" name="removeButton">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>310</y>
-      <width>111</width>
+      <x>20</x>
+      <y>520</y>
+      <width>761</width>
       <height>29</height>
      </rect>
     </property>
     <property name="text">
-     <string>Remove book</string>
+     <string>Remove Book</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="AdButton">
+   <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>310</y>
-      <width>111</width>
-      <height>29</height>
+      <x>20</x>
+      <y>40</y>
+      <width>741</width>
+      <height>471</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Add book</string>
-    </property>
+    <layout class="QVBoxLayout" name="verticalLayout"/>
    </widget>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>800</width>
-     <height>25</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
